--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "esplora-client"
-version = "0.5.0"
-edition = "2018"
+version = "0.6.0"
+edition = "2021"
 authors = ["Alekos Filini <alekos.filini@gmail.com>"]
 license = "MIT"
 homepage = "https://github.com/bitcoindevkit/rust-esplora-client"
@@ -10,6 +10,7 @@ documentation = "https://docs.rs/esplora-client/"
 description = "Bitcoin Esplora API client library. Supports plaintext, TLS and Onion servers. Blocking or async"
 keywords = ["bitcoin", "esplora"]
 readme = "README.md"
+resolver = "2"
 
 [lib]
 name = "esplora_client"
@@ -23,6 +24,9 @@ bitcoin-internals = { version = "0.1.0", features = ["alloc"] }
 log = "^0.4"
 ureq = { version = "2.5.0", features = ["json"], optional = true }
 reqwest = { version = "0.11", optional = true, default-features = false, features = ["json"] }
+tokio = { version = "1.20.1", features = ["sync"] }
+serde_json = "1.0.114"
+bytes = "1.5.0"
 
 [dev-dependencies]
 serde_json = "1.0"
@@ -36,9 +40,10 @@ zip = "=0.6.3"
 base64ct = "<1.6.0"
 
 [features]
-default = ["blocking", "async", "async-https"]
+default = ["blocking", "async", "async-https", "socks"]
+socks = ["reqwest/socks"]
 blocking = ["ureq", "ureq/socks-proxy"]
-async = ["reqwest", "reqwest/socks"]
+async = ["reqwest"]
 async-https = ["async", "reqwest/default-tls"]
 async-https-native = ["async", "reqwest/native-tls"]
 async-https-rustls = ["async", "reqwest/rustls-tls"]
